data/derived/comb/progs/unify/prog1252.ml.out
Characters 340-341:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int -> int * int list -> int * int list
       but an expression was expected of type int -> int * int list -> int
       Type int * int list is not compatible with type int 
